Added Speed insight and Cleaned Website Coming soon page

--- a/app/globals.css
+++ b/app/globals.css
@@ -75,3 +75,7 @@ a {
   color: #9ba3af !important;
 }
 /* Add any other custom styles you want */
+
+.preserve-whitespace {
+  white-space: pre-wrap;
+}
